(coq.theory
 (name elpi_elpi) ; FIXME
 (package rocq-elpi))

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (progn
     (run rocq_elpi_shafile %{deps})))))

(install
 (files
  (glob_files (*.elpi with_prefix coq/user-contrib/elpi_elpi/)))
 (section lib_root)
 (package rocq-elpi))
