(executable
 (name shafile)
 (public_name coq_elpi_shafile)
 (modules shafile)
 (package coq-elpi))

(executable
 (name optcomp)
 (public_name coq_elpi_optcomp)
 (modules optcomp)
 (libraries str)
 (package coq-elpi))

(executable
 (name version_parser)
 (public_name coq_elpi_version_parser)
 (modules version_parser)
 (libraries str elpi)
 (package coq-elpi))