(executable
 (name shafile)
 (public_name rocq_elpi_shafile)
 (modules shafile)
 (package rocq-elpi))

(executable
 (name optcomp)
 (public_name rocq_elpi_optcomp)
 (modules optcomp)
 (libraries str)
 (package rocq-elpi))

(executable
 (name version_parser)
 (public_name rocq_elpi_version_parser)
 (modules version_parser)
 (libraries str elpi)
 (package rocq-elpi))
