(coq.theory
 (package coq-elpi)
 (name elpi_examples)
 (plugins coq-elpi.elpi)
 (theories elpi))

(rule
 (target tutorial_coq_elpi_tactic.v)
 (deps
  (glob_files tutorial_coq_elpi_tactic.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

; (include_subdirs qualified)
