(library
 (name elpi_plugin)
 (public_name coq.plugins.elpi)
 (flags :standard -warn-error -3-33)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (libraries coq.plugins.ltac elpi))

(rule
 (targets coq_elpi_vernacular_syntax.ml)
 (deps (:mlg-file coq_elpi_vernacular_syntax.mlg))
 (action (run coqpp %{mlg-file})))
