(coq.theory
 (name elpi.tests)
 (plugins rocq-elpi.elpi)
 (theories elpi))

(include_subdirs qualified)

(rule
 (target test_API_proof.v)
 (deps
  (glob_files test_API_proof.v.in))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target dummy.v)
 (deps (glob_files_rec *.elpi))
 (action
  (with-stdout-to %{target} (echo "(* copy elpi files to _build *)"))))
