(rocq.theory
 (name elpi)
 (package rocq-elpi)
 (generate_project_file)
 (plugins rocq-elpi.elpi)
 (theories elpi_elpi))

(rule
 (target elpi.v)
 (deps
  (glob_files elpi.v.in))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_optcomp "%{rocq:version.major}.%{rocq:version.minor}" %{deps}))))

(include_subdirs qualified)
