(coq.theory
  ; ext is the logical path that can be used in rocq
 (name ext)
 (theories elpi_elpi elpi ext_elpi_src)
  ; the rocq files in this folder (theories)
  ; will use the pluging called ext.plug
  ; this is the name of the library defined in src
 (plugins ext.plug)
 (package ext))

(include_subdirs qualified)