(lang dune 3.23)
(using rocq 0.13)
(name Ext)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ext)
 (synopsis "Ext")
 (description "Ext")
 (depends rocq-elpi))

(package
 (name ext-tests)
 (synopsis "Ext")
 (description "Ext")
 (depends rocq-elpi))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
