(lang dune 3.13)
(using coq 0.8)
(name Ext)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name myExtension)
 (synopsis "myExtension adds extra Elpi datatypes and APIs")
 (description "This package provides some extra goodies")
 (depends rocq-elpi))

(package
 (name myExtension-tests)
 (synopsis "myExtension tests - do not install")
 (description "myExtension tests - do not install")
 (depends rocq-elpi))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
