(rule
 (target Basics.v)
 (deps
  (glob_files Basics.v.in))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target Syntax.v)
 (deps
  (glob_files Syntax.v.in))
 (action
  (with-stdout-to %{target}
   (run rocq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))