; remove this directory when requiring Rocq >= 9.0
; and replace all "From elpi.core" by "From Corelib"

(rule
 (target Bool.v)
 (deps
  (glob_files Bool.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target ListDef.v)
 (deps
  (glob_files ListDef.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target Morphisms.v)
 (deps
  (glob_files Morphisms.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target PosDef.v)
 (deps
  (glob_files PosDef.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target PrimInt63.v)
 (deps
  (glob_files PrimInt63.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target PrimFloat.v)
 (deps
  (glob_files PrimFloat.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target RelationClasses.v)
 (deps
  (glob_files RelationClasses.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target Setoid.v)
 (deps
  (glob_files Setoid.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target ssreflect.v)
 (deps
  (glob_files ssreflect.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target ssrfun.v)
 (deps
  (glob_files ssrfun.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))

(rule
 (target ssrbool.v)
 (deps
  (glob_files ssrbool.v.in))
 (action
  (with-stdout-to %{target}
   (run coq_elpi_optcomp "%{coq:version.major}.%{coq:version.minor}" %{deps}))))
