(coq.theory
 (name elpi.apps.NES.elpi)
 (package coq-elpi)
 (theories elpi))

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (echo ""))))

(install
 (files
  (glob_files (*.elpi with_prefix coq/user-contrib/elpi/apps/NES/elpi/)))
 (section lib_root)
 (package coq-elpi))
