(library
 (name elpi_coercion_plugin)
 (public_name coq-elpi.coercion)
 (flags :standard -w -27)
 (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~coq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries coq-core.plugins.ltac coq-core.vernac coq-elpi.elpi))

(coq.pp
 (modules coq_elpi_coercion_hook))
