(library
 (name elpi_coercion_plugin)
 (public_name rocq-elpi.coercion)
 (flags :standard -w -27)
 (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~coq:(Defined \"%{rocq:version.major}.%{rocq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac rocq-runtime.vernac rocq-elpi.elpi))

(rocq.pp
 (modules rocq_elpi_coercion_hook))
