(coq.theory
 (name elpi.apps.derive.elpi)
 (package coq-elpi)
 (theories elpi))

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (progn
     (run coq_elpi_shafile %{deps})))))

(install
 (files
  (glob_files (*.elpi with_prefix coq/user-contrib/elpi/apps/derive/elpi/)))
 (section lib_root)
 (package coq-elpi))
