(coq.theory
 (package rocq-elpi-tests-stdlib)
 (name elpi_apps_derive_tests_stdlib)
 (flags :standard -w -default-output-directory)
 (theories elpi elpi.apps.derive elpi.apps.derive.tests micromega_plugin Stdlib))  ; we need micromega_plugin because dune doesn't handle transitive dependencies

(include_subdirs qualified)
