(rocq.theory
 (name elpi.apps.locker.elpi)
 (package rocq-elpi)
 (generate_project_file)
 (theories elpi))

(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (progn
     (run rocq_elpi_shafile %{deps})))))

(install
 (files
  (glob_files (*.elpi with_prefix coq/user-contrib/elpi/apps/locker/elpi/)))
 (section lib_root)
 (package rocq-elpi))
