(coq.theory
 (package rocq-elpi-tests-stdlib)
 (name elpi_apps_tc_tests_stdlib)
 (flags :standard -async-proofs-cache force)
 (theories elpi elpi.apps.tc elpi.apps.tc.tests micromega_plugin Stdlib))  ; we need micromega_plugin because dune doesn't handle transitive dependencies

(include_subdirs qualified)
