(rocq.theory
 (name elpi.xml.tests)
 (package rocq-elpi-xml-tests)
 (generate_project_file)
 (theories elpi elpi.xml))

; work around missing dune support for Extra Dependency 
; https://github.com/ocaml/dune/pull/9591
(rule
 (target dummy.v)
 (deps
  (glob_files *.xml))
 (action
  (with-stdout-to %{target}
   (progn
     (run rocq_elpi_shafile %{deps})))))

(include_subdirs qualified)
