(executable
 (name gen_doc)
 ; this doc depends on the ext_plus library, where the
 ; new builtins are declared
 (libraries myExtension.plugin))

(rule
 ; we target ext.elpi which is the name of the file targeted in ext.ml
 (targets myExtension.elpi)
 (deps gen_doc.exe)
 (mode promote)
 (action (run ./gen_doc.exe)))

; (install
;  (files ext.elpi)
;  (section doc)
;  (package ext))
