(rocq.theory
  ; ext is the logical path that can be used in rocq
 (name ext_elpi_src)
 (theories elpi)
  ; the rocq files in this folder (theories)
  ; will use the pluging called ext.plug
  ; this is the name of the library defined in src
 (plugins ext.plug)
 (package ext))

(include_subdirs qualified)

; this rule is needed for loading elpi files as extra deps
(rule
 (target dummy.v)
 (deps
  (glob_files *.elpi))
 (action
  (with-stdout-to %{target}
   (progn
     (run rocq_elpi_shafile %{deps})))))