(library
 (name elpi_example_plugin)
 (public_name rocq-elpi.elpi_example_plugin)
 (flags :standard -w -27)
 (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~coq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")"))
 (libraries rocq-runtime.plugins.ltac rocq-runtime.vernac rocq-elpi.elpi elpi))
